manifests/gitea/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  namespace: gitea
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: git
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git
  namespace: gitea
  labels:
    app: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git
  serviceName: "git"
  template:
    metadata:
      labels:
        app: git
    spec:
      priorityClassName: critical
      containers:
      - name: git
        image: gitea/gitea:1.27.3
        ports:
        - containerPort: 3000
          name: web
        resources:
          requests:
            memory: 700Mi
        volumeMounts:
        - mountPath: /data
          name: git-data
  volumeClaimTemplates:
  - metadata:
      name: git-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: scw-bssd-retain
      resources:
        requests:
          storage: 20Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - git.cluster.fun
    secretName: git
  rules:
  - host: git.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: git
            port:
              number: 80
